# coeus-adapter

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  TODO
.github/workflows/: cmake.yml
CI/: enviornment.sh  lint.sh
CI/Ares/: env.sh
CI/coeus/: repo.yaml
CI/docker/: base.dockerfile  coeus-ssh.dockerfile  coeus.dockerfile
CI/jarvis-util/jarvis_util/shell/: filesystem.py
CI/py_coeus_ci/py_coeus_ci/: test_manager.py  test_manager_bench.py
build-docker/: COEUS.cbp  CTestTestfile.cmake  Makefile
build-docker/src/: Makefile
build-docker/test/: CTestTestfile.cmake  Makefile
build-docker/test/real_apps/: CTestTestfile.cmake  Makefile
build-docker/test/real_apps/gray-scott/: CTestTestfile.cmake  Makefile
build-docker/test/unit/: CTestTestfile.cmake  Makefile
build-remote/: COEUS.cbp  CTestTestfile.cmake  Makefile
build-remote/external_libraries/cereal/: Makefile
build-remote/external_libraries/spdlog/: Makefile
build-remote/src/: Makefile
build-remote/test/: CTestTestfile.cmake  Makefile
build-remote/test/real_apps/: CTestTestfile.cmake  Makefile
build-remote/test/real_apps/gray-scott/: CTestTestfile.cmake  Makefile
build-remote/test/unit/: CTestTestfile.cmake  Makefile
build-remote/test/unit/basic/: CTestTestfile.cmake  Makefile
build-remote/test/unit/basic_multi_variable/: CTestTestfile.cmake  Makefile
build-remote/test/unit/metadata/: CTestTestfile.cmake  Makefile
build-remote/test/unit/split_multi_variable/: CTestTestfile.cmake  Makefile
build-remote/test/unit/split_single_variable/: CTestTestfile.cmake  Makefile
external_libraries/cereal/: CMakeLists.txt
external_libraries/rapidjson/: CMakeLists.txt
external_libraries/spdlog/: CMakeLists.txt
include/coeus/: Container.h  ContainerManager.h  HermesEngine.h  MetadataSerializer.h  coeus.h  hermes_engine.h  metadata_serializer.h
include/common/: Adios2Writer.h  ClassLoader.h  DbOperation.h  DbWorker.h  ErrorCodes.h  ErrorDefinition.h  FileLock.h  JSONParser.h  MetadataStructs.h  SQLite_ideas.h  SQlite.h  ThreadPool.h  Tracer.h  VariableMetadata.h  YAMLParser.h  globalVariable.cpp  globalVariable.h
include/comms/: Bucket.h  Hermes.h  MPI.h
include/comms/interfaces/: IBucket.h  IHermes.h  IMPI.h
logs/1_17_2024/comment out endstep/: combined.json  engine_test.txt  logMerger.py  putDeferred output.txt
logs/1_17_2024/comment out endstep/logs/: trace_1046297.json  trace_1046298.json  trace_1046299.json  trace_1046300.json  trace_204827.json  trace_204828.json  trace_204829.json  trace_204830.json
src/: CMakeLists.txt  coeus.cc  hermes_engine.cc
tasks/: CMakeLists.txt
tasks/coeus_mdm/include/coeus_mdm/: coeus_mdm.h  coeus_mdm_lib_exec.h  coeus_mdm_methods.h  coeus_mdm_tasks.h  (+1 more)
tasks/coeus_mdm/src/: CMakeLists.txt  coeus_mdm.cc
tasks/hermes_data_op/src/: CMakeLists.txt
tasks/rankConsensus/: CMakeLists.txt
tasks/rankConsensus/src/: CMakeLists.txt  rankConsensus.cc
test/: CMakeLists.txt  native_tests.py  tests2.py
test/benchmark/: CMakeLists.txt  ares-orangefs-deploy-custom  ares-orangefs-terminate  benchmark_tests.py  final_conf.conf  myhosts.txt  run_tests.sh
test/data/test_confs/: hermes_server.yaml  hermes_server_ares.yaml
test/integration/: CMakeLists.txt
test/integration/basic/: basic.cc
test/integration/basic_multi_variable/: CMakeLists.txt  basic_three_vars.cc
test/integration/currentStep/: currentStep.cc
test/integration/logging/: logger_test.cc
test/integration/metadata/: get_metadata.cc  metadata.cc  put_metadata.cc
test/integration/split_multi_variable/: CMakeLists.txt  get_2vars_test.cc  put_2vars_test.cc
test/integration/split_single_variable/: CMakeLists.txt  get_test.cc
test/jarvis-repo/adios2_gray_scott/: pkg.py
test/jarvis-repo/adios2_gray_scott_post/: pkg.py
test/jarvis-repo/adios2_producer_consumer/: pkg.py
test/jarvis-repo/io-comp/: pkg.py
test/jarvis-repo/io_comp/: pkg.py
test/jarvis-repo/mdm_compare/: pkg.py
test/mocks/: CMakeLists.txt  MockBucket.h  MockHermes.h  MockMPI.h
test/one_var/: get_test.cc
test/real_apps/: CMakeLists.txt
test/real_apps/deploy/: empress_metadata.py  gray_scott_coeus.py  hermes_metadata.py  io_adios.py  io_coeus.py  io_nfs.py  operator_adios.py  operator_coeus.py
test/real_apps/gray-scott/: CMakeLists.txt  adios2-hermes.xml  adios2.xml  visit-sst.session.gui
test/real_apps/gray-scott/analysis/: pdf-calc.cpp  pdf-calc_prints.cpp
test/real_apps/gray-scott/simulation/: adiosWrite.h  gray-scott.cpp  main.cpp  restart.cpp  settings-files-hdd.json  settings-files-hermes.json  settings-files-nvme.json  settings-files.json  settings.cpp  writer.cpp  writer.h
test/real_apps/hash_operator/: Hashing.cpp  Liz_hash.cpp  adios2.xml  compare_bp5.h
test/real_apps/io_comp/: CMakeLists.txt  io_comp.cpp
test/real_apps/metadata_comp/: CMakeLists.txt  metadata_empress.cpp  metadata_hermes.cpp
test/real_apps/operator_comp/: CMakeLists.txt  operator_comp.xml  operator_consumer.cpp  operator_producer.cpp
test/src/: CMakeLists.txt
test/src/integration/: CMakeLists.txt
test/src/mocks/: CMakeLists.txt
test/src/real_apps/: CMakeLists.txt
test/two_vars/: put_2vars_test.cc
test/unit/: CMakeLists.txt  basic.cc  basic_three_vars.cc  get_2vars_test.cc  get_test.cc  put_test.cc  tests.py
test/unit/JSONParser/: CMakeLists.txt  test.cpp
test/unit/MPI/: CMakeLists.txt  mpit_tests.cpp
test/unit/YAMLParser/: CMakeLists.txt  test.cpp
test/unit/YAMLParser/samples/: correct.yaml  wrong.yaml
test/unit/basic/: CMakeLists.txt  basic.cc
test/unit/basic_multi_variable/: CMakeLists.txt
test/unit/class_loader/: test.cpp
test/unit/class_loader/job_2/: test.cpp
test/unit/currentStep/: CMakeLists.txt  currentStep.cc
test/unit/gtest/: gtest.cpp
test/unit/logging/: CMakeLists.txt  logger_test.cc
test/unit/metadata/: CMakeLists.txt  get_metadata.cc  metadata.cc  put_metadata.cc
test/unit/split_multi_variable/: CMakeLists.txt  get_2vars_test.cc  put_2vars_test.cc
test/unit/split_single_variable/: CMakeLists.txt
test/unit/sqlite/: CMakeLists.txt  base.cpp  test_ideas.cpp
(+88 files in other folders)
